# natspy-lock

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
natspy_lock/: __init__.py  exceptions.py  lock.py
src/natspy_lock/: __init__.py
tests/: test_lock.py
